@@ -1,3 +1,8 @@
+28 Feb 2007 coudercd
+ * fixed the label of shared lib linking flags variable in the log
+   message (noticed by barratis from toy'd project).
+
+
 25 Feb 2007 coudercd
  * fixed a segfaulting bug in code_logger().
 
